# congmiao-toolbox

./: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  state.svelte.ts  tools.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: heartrate.rs  lib.rs  main.rs  peek_server.rs  usage_tracker.rs
src-tauri/src/peek_server/: audio.rs  mod.rs
src/components/: ActivityFeed.svelte  ColorPickerTool.svelte  CommandPalette.svelte  EncoderTool.svelte  FileTile.svelte  HROverlay.svelte  HashTool.svelte  HeartRateWidget.svelte  ImageConverterTool.svelte  JsonFormatter.svelte  JsonTile.svelte  LuckyWheelTool.svelte  PeekPCTool.svelte  PeekPCWidget.svelte  PythonFormatter.svelte  ScreenTimeView.svelte  Sidebar.svelte  SystemMonitorTile.svelte  TimerTool.svelte  TimestampTile.svelte  Topbar.svelte  TranslatorTool.svelte
tmp/congmiao-svelte-template/: index.html  package.json
