[package]
name = "congmiao-toolbox"
version = "0.1.0"
description = "A personal desktop toolbox built with Tauri, React and Material UI."
authors = ["tenonsuzu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "congmiao_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tower-http = { version = "0.6.8", features = ["cors"] }
screenshots = "0.8.10"
image = "0.25.10"
local-ip-address = "0.6.10"
active-win-pos-rs = "0.10.0"
btleplug = { version = "0.12.0", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4"] }
futures = "0.3.32"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
